--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/tryy3/MinatsuPlugDJ",
   "dependencies": {
     "nedb": "^1.1.1",
-    "plugapi": "^3.1.2"
+    "plugapi": "^3.1.2",
+    "underscore": "^1.8.2"
   }
 }
